Responsive adjustments in style.css

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
           totam aliquid ut dolorum?
         </p>
       </div>
-      <div class="right"></div>
-      <div class="img-container"></div>
+      <div class="right">
+        <div class="right-img"></div>
+      </div>
     </main>
     <main class="card-list">
-      <section class="feature-section"></section>
       <div class="card">
         <div class="img-container bike-img"></div>
 
